Renamed node to record to better fit flt nomenclature
- Adding some palette records
- added color, material and light source palette
- added warning to openReader
- added a Record base class for all records.
- added type.h to regroup all type structs.

- Added Vertex Palette Record
- added parsing for vertex palette entries
- connected Palettes to Header Node

- added object, face and group record.

- Added External reference and Vertex List.

- Created directories for major records type.

- Added MatrixRecord, TexturePaletteRecord and TranslatedRecod
- Added Document, modified openFlightReader to return a Document

- Moved toDotFormat from Document to Utilities...
- added const to some methods

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,16 +4,21 @@ cmake_minimum_required(VERSION 3.1)
 set( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin/${PROJECT_NAME} )
 
 INCLUDE_DIRECTORIES( ${OpenFlightReader_SOURCE_DIR}/.)
-INCLUDE_DIRECTORIES( ${OpenFlightReader_SOURCE_DIR}/sources/)
+INCLUDE_DIRECTORIES( ${OpenFlightReader_SOURCE_DIR}/openFlight/)
 
 #local files
 FILE (GLOB SOURCES *.h *.cpp)
 FILE (GLOB OPENFLIGHT openFlight/*.h openFlight/*.cpp)
+FILE (GLOB PRIMARYRECORDS openFlight/PrimaryRecords/*.h openFlight/PrimaryRecords/*.cpp)
+FILE (GLOB ANCILLARYRECORDS openFlight/AncillaryRecords/*.h openFlight/AncillaryRecords/*.cpp)
 
 #make executable
 SOURCE_GROUP("application" FILES ${SOURCES})
-SOURCE_GROUP("openFlight" FILES ${OPENFLIGHT})
-ADD_EXECUTABLE( ${PROJECT_NAME}  ${SOURCES} ${OPENFLIGHT} )
+SOURCE_GROUP("OpenFlight" FILES ${OPENFLIGHT})
+SOURCE_GROUP("OpenFlight\\PrimaryRecords" FILES ${PRIMARYRECORDS})
+SOURCE_GROUP("OpenFlight\\AncillaryRecords" FILES ${ANCILLARYRECORDS})
+
+ADD_EXECUTABLE( ${PROJECT_NAME} ${SOURCES} ${OPENFLIGHT} ${PRIMARYRECORDS} ${ANCILLARYRECORDS})
 
 #install to bin and move assets
 SET ( destinationPath ${OpenFlightReader_SOURCE_DIR}/bin/${PROJECT_NAME} )
