--- a/generators/csharp/CMakeLists.txt
+++ b/generators/csharp/CMakeLists.txt
@@ -1,4 +1,4 @@
-project("openflight.CSharp" CSharp)
+project("OpenFlightReader.CSharp" CSharp)
 
 set(CPPSHARP_VERSION 0.8.19)
 set(DOTNET_TARGET_FRAMEWORK 4.6)
@@ -16,7 +16,7 @@ endif()
 set(SRC_FILES
 	"Program.cs"
 	"OpenFlightLibrary.cs"
-	"packages.config"
+	# "packages.config"
 	"Properties/Resources.resx")
 
 add_executable(${PROJECT_NAME} ${SRC_FILES})
@@ -25,14 +25,25 @@ set_target_properties( ${PROJECT_NAME} PROPERTIES
   VS_GLOBAL_ROOTNAMESPACE "OpenFlight.CSharp"
   VS_DOTNET_TARGET_FRAMEWORK_VERSION "v${DOTNET_TARGET_FRAMEWORK}"
   VS_GLOBAL_StartupObject "OpenFlight.CSharp.Program"
-  VS_DOTNET_REFERENCE_Baseclass.Contrib.Nuget.Output.Build "${CMAKE_CURRENT_BINARY_DIR}/packages/Baseclass.Contrib.Nuget.Output.2.4.3/build/Baseclass.Contrib.Nuget.Output.Build.dll"
+  # VS_DOTNET_REFERENCE_Baseclass.Contrib.Nuget.Output.Build "${CMAKE_CURRENT_BINARY_DIR}/packages/Baseclass.Contrib.Nuget.Output.2.4.3/build/Baseclass.Contrib.Nuget.Output.Build.dll"
   VS_DOTNET_REFERENCE_CppSharp "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/lib/CppSharp.dll"
   VS_DOTNET_REFERENCE_CppSharp.AST "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/lib/CppSharp.AST.dll"
+  # VS_DOTNET_REFERENCE_CppSharp.CppParser "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/output/CppSharp.CppParser.dll"
   VS_DOTNET_REFERENCE_CppSharp.Generator "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/lib/CppSharp.Generator.dll"
   VS_DOTNET_REFERENCE_CppSharp.Parser "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/lib/CppSharp.Parser.dll"
   VS_DOTNET_REFERENCE_CppSharp.Parser.CLI "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/lib/CppSharp.Parser.CLI.dll"
   VS_DOTNET_REFERENCE_CppSharp.Runtime "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/lib/CppSharp.Runtime.dll"
+  VS_DOTNET_REFERENCE_CppSharp.Runtime "${CMAKE_CURRENT_BINARY_DIR}/packages/CommandLineParser.2.2.1/lib/net45/CommandLine.dll"
   VS_DOTNET_REFERENCES "System"
 )
 
 target_compile_options(${PROJECT_NAME} PUBLIC "/unsafe")
+
+add_custom_command(TARGET ${PROJECT_NAME}
+  POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/output/CppSharp.CppParser.dll" "$<TARGET_FILE_DIR:${PROJECT_NAME}>"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  VERBATIM)
+add_custom_command(TARGET ${PROJECT_NAME}
+  POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/output/lib" "$<TARGET_FILE_DIR:${PROJECT_NAME}>/lib"
+  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  VERBATIM)
