Fix working directory for Csharp references

--- a/generators/csharp/CMakeLists.txt
+++ b/generators/csharp/CMakeLists.txt
@@ -41,9 +41,9 @@ target_compile_options(${PROJECT_NAME} PUBLIC "/unsafe")
 
 add_custom_command(TARGET ${PROJECT_NAME}
   POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/output/CppSharp.CppParser.dll" "$<TARGET_FILE_DIR:${PROJECT_NAME}>"
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
   VERBATIM)
 add_custom_command(TARGET ${PROJECT_NAME}
   POST_BUILD COMMAND ${CMAKE_COMMAND} -E copy_directory "${CMAKE_CURRENT_BINARY_DIR}/packages/CppSharp.${CPPSHARP_VERSION}/output/lib" "$<TARGET_FILE_DIR:${PROJECT_NAME}>/lib"
-  WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}
   VERBATIM)
